--- a/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
+++ b/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
@@ -110,6 +110,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class read_sexcats():\n",
+    "    def __init__(self):\n",
+    "        phot_df = self.join(1)\n",
+    "        self.phot_df = self.join(2, phot_df)\n",
+    "        #phot_df = self.return_func(phot_df)\n",
+    "        \n",
+    "    def join(self, wfc, phot_df=None):\n",
+    "        items = np.sort([w.split('_flt')[0] for w in glob('./wfc'+str(wfc)+'/*rate*regrid.fits')])\n",
+    "        for iterator in range(len(items)):\n",
+    "            item = items[iterator]\n",
+    "            hdul = fits.open(glob(item+'*regrid*')[0])\n",
+    "            expstart = hdul[0].header['EXPSTART']\n",
+    "            EXPTIME  = hdul[0].header['EXPTIME']\n",
+    "            filter_  = hdul[0].header['FILTER']\n",
+    "            sexcat = Table.read(glob(item+'*phot*')[0], format=\"fits\", hdu='LDAC_OBJECTS')#.to_pandas()\n",
+    "            sexcat = self.unpack_apers(sexcat)\n",
+    "            sexcat.remove_columns(['MAG_APER', 'MAGERR_APER', 'FLUX_APER', 'FLUXERR_APER'])    \n",
+    "            sexcat = sexcat.to_pandas()\n",
+    "\n",
+    "            sexcat = sexcat.rename(columns={'NUMBER':'SExID'})\n",
+    "            \n",
+    "            if wfc==2: \n",
+    "                sexcat.SExID += phot_df[phot_df.WhichWFC==1].SExID.max()\n",
+    "            #sexcat = sexcat.rename(columns={'VECTOR_ASSOC':'ID'})\n",
+    "            #sexcat['ID'] = sexcat['ID'].astype(int)\n",
+    "\n",
+    "            sexcat['T_Start'] = expstart\n",
+    "            sexcat['Exptime'] = EXPTIME\n",
+    "            sexcat['Exp_Length'] = ('deep' if EXPTIME > 31 else 'short')\n",
+    "            sexcat['Filter']     = filter_\n",
+    "            sexcat['WhichWFC']   = wfc\n",
+    "            sexcat = self.clean(sexcat)\n",
+    "            #sexcat = sexcat.set_index('ID')\n",
+    "            try:\n",
+    "                phot_df = pd.concat((phot_df,sexcat), axis=0)\n",
+    "            except:\n",
+    "                phot_df = sexcat\n",
+    "        return phot_df\n",
+    "        \n",
+    "    def return_func(self):\n",
+    "        print('Done. Returning photometry dataframe')\n",
+    "        return self.phot_df.set_index(['SExID', 'Filter', 'T_Start', 'Exp_Length']).sort_index()\n",
+    "    \n",
+    "    def clean(self, sexcat):\n",
+    "        \"\"\"I take all rules from the HCV catalogue\"\"\"\n",
+    "        sexcat = sexcat[(sexcat.MAG_APER2<80)&(sexcat.MAG_AUTO<80)]\n",
+    "        sexcat = sexcat[sexcat.MAG_APER2<31.0]\n",
+    "        sexcat = sexcat[sexcat.MAG_AUTO<35.0]\n",
+    "        sexcat = sexcat[sexcat.FLAGS<=7]\n",
+    "        sexcat = sexcat[sexcat.MAGERR_APER2<0.2]\n",
+    "        return sexcat\n",
+    "    \n",
+    "    def unpack_apers(self, sexcat):\n",
+    "        \"\"\"Unpacking the stacked lists\n",
+    "           NOTES:\n",
+    "           APER1 and APER2 refer to Whitmore et al 2016 (2.5 and 7.5 pixels diameter)\n",
+    "           APER3 refers to our own aperture, which is 6 pixels in diameter\n",
+    "           \"\"\"\n",
+    "        sexcat['FLUX_APER1'] = [w[0] for w in sexcat['FLUX_APER']]\n",
+    "        sexcat['FLUX_APER3'] = [w[1] for w in sexcat['FLUX_APER']]\n",
+    "        sexcat['FLUX_APER2'] = [w[2] for w in sexcat['FLUX_APER']]\n",
+    "        sexcat['FLUXERR_APER1'] = [w[0] for w in sexcat['FLUXERR_APER']]\n",
+    "        sexcat['FLUXERR_APER3'] = [w[1] for w in sexcat['FLUXERR_APER']]\n",
+    "        sexcat['FLUXERR_APER2'] = [w[2] for w in sexcat['FLUXERR_APER']]\n",
+    "\n",
+    "        sexcat['MAG_APER1'] = [w[0] for w in sexcat['MAG_APER']]\n",
+    "        sexcat['MAG_APER3'] = [w[1] for w in sexcat['MAG_APER']]\n",
+    "        sexcat['MAG_APER2'] = [w[2] for w in sexcat['MAG_APER']]\n",
+    "        sexcat['MAGERR_APER1'] = [w[0] for w in sexcat['MAGERR_APER']]\n",
+    "        sexcat['MAGERR_APER3'] = [w[1] for w in sexcat['MAGERR_APER']]\n",
+    "        sexcat['MAGERR_APER2'] = [w[2] for w in sexcat['MAGERR_APER']]\n",
+    "        return sexcat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class HCV_error_analysis():\n",
     "    def __init__(self, phot_df):\n",
     "        self.phot_df = phot_df\n",
@@ -213,6 +293,18 @@
     "        self.MAD         = MagOffset.groupby(['SExID', 'Filter']).median()\n",
     "        return self.MAD\n",
     "    \n",
+    "    def GetMADPlot(self):\n",
+    "        self.GetMADvalues()\n",
+    "        self.MAD.hist(bins=np.arange(0,1,0.002),cumulative=False, histtype='step', normed=True, linewidth=2)\n",
+    "        plt.xlabel('MAD Value')\n",
+    "        plt.ylabel('PDF')\n",
+    "        plt.show()\n",
+    "        \n",
+    "        self.MAD.hist(bins=np.arange(0,1,0.002),cumulative=True, histtype='step', normed=True, linewidth=2)\n",
+    "        plt.xlabel('MAD Value')\n",
+    "        plt.ylabel('CDF')\n",
+    "        plt.show()\n",
+    "    \n",
     "    def DrawTrumpets(self,magcol = 'MAG_APER3', IDcol = 'SExID'):\n",
     "        phot_df = self.phot_df\n",
     "        merrcol = magcol.replace('MAG', 'MERR')\n",
@@ -295,7 +387,7 @@
     "        Synth_err   = self.phot_df.loc[SExID, Filter].SynErrorDevSig\n",
     "        MAG_err     = self.phot_df.loc[SExID, Filter].MAGERR_APER2\n",
     "        \n",
-    "        plt.errorbar(JulianDates, Magnitudes, yerr=MAG_err, linestyle='none', fmt='o', ecolor='black', capthick=2)\n",
+    "        plt.errorbar(JulianDates, Magnitudes, yerr=Synth_err, linestyle='none', fmt='o', ecolor='black', capthick=2)\n",
     "        #plt.scatter(JulianDates, Magnitudes, marker='o', c='black')"
    ]
   },
@@ -340,34 +432,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = phot_df['MAG_APER2'].groupby(['SExID', 'Filter']).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Analyzer = Analysis(phot_df)\n",
-    "Analyzer.GetTimeSeries()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Analyzer.DrawTrumpets()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -376,7 +440,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_phot_df = phot_df[phot_df.SynErrorDevSig<2]"
+    "Analyzer = Analysis(phot_df)\n",
+    "Analyzer.DrawTrumpets()"
    ]
   },
   {
@@ -385,11 +450,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_phot_df = phot_df[phot_df.SynErrorDevSig<2]\n",
+    "phot_dfAnalyzer = Analysis(phot_df2)\n",
+    "Analyzer.DrawTrumpets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(phot_df['MAG_APER2'])# - phot_df2['MAG_APER2']).abs().hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nearest = nearest_neighbours(phot_df, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_phot_df = phot_df[(phot_df.SynErrorDevSig<2)*(phot_df.index.get_level_values(3)=='deep')]\n",
     "for SExID, neightbours in nearest[:1].iterrows():\n",
     "    MedianMagTime = best_phot_df.loc[neightbours].groupby(['Filter', 'T_Start'])['MAG_APER2'].median()\n",
     "    MedianMagOverall = best_phot_df.loc[neightbours].groupby(['Filter'])['MAG_APER2'].median()\n",
-    "    MedianMagTime - MedianMagOverall"
+    "    MZPcorr = MedianMagTime - MedianMagOverall\n"
    ]
   },
   {
@@ -410,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAD"
+    "X,y = phot_df.loc[10,'F336W']['SynError'].values.reshape(-1,1),phot_df.loc[10,'F336W']['MAG_APER2'].values.reshape(-1,1)"
    ]
   },
   {
@@ -419,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MedianMagTime - MedianMagOverall"
+    "from sklearn import linear_model, datasets"
    ]
   },
   {
@@ -427,7 +520,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ransac = linear_model.RANSACRegressor()\n",
+    "ransac.fit(X, y)\n",
+    "a, b = ransac.estimator_.coef_[0][0], ransac.estimator_.intercept_[0]\n",
+    "plt.scatter(X, y)\n",
+    "plt.plot(np.arange(1,2,0.01), a*np.arange(1,2,0.01)+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=Analyzer.GetMADvalues()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[a>0.3].idxmin()"
+   ]
   },
   {
    "cell_type": "code",
