Several updates, trying to fit alignment problem

--- a/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
+++ b/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
@@ -16,6 +16,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MAD > 5 times MAG error\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,7 +113,7 @@
     "        sexcat['MAGERR_APER1'] = [w[0] for w in sexcat['MAGERR_APER']]\n",
     "        sexcat['MAGERR_APER3'] = [w[1] for w in sexcat['MAGERR_APER']]\n",
     "        sexcat['MAGERR_APER2'] = [w[2] for w in sexcat['MAGERR_APER']]\n",
-    "        return sexcat\n"
+    "        return sexcat"
    ]
   },
   {
@@ -160,7 +169,7 @@
     "        \n",
     "    def return_func(self):\n",
     "        print('Done. Returning photometry dataframe')\n",
-    "        return self.phot_df.set_index(['AssocID', 'Filter', 'T_Start', 'Exp_Length']).sort_index()\n",
+    "        return self.phot_df.set_index(['AssocID', 'Filter', 'T_Start']).sort_index()\n",
     "    \n",
     "    def clean(self, sexcat):\n",
     "        \"\"\"I take all rules from the HCV catalogue\"\"\"\n",
@@ -216,6 +225,8 @@
     "            hdul = fits.open(glob(item+'*pamcorr_rate*')[0])\n",
     "            expstart = hdul[0].header['EXPSTART']\n",
     "            EXPTIME  = hdul[0].header['EXPTIME']\n",
+    "            if EXPTIME < 31:\n",
+    "                continue\n",
     "            filter_  = hdul[0].header['FILTER']\n",
     "            sexcat = Table.read(glob(item+'*phot*')[0], format=\"fits\", hdu='LDAC_OBJECTS')#.to_pandas()\n",
     "            sexcat = self.unpack_apers(sexcat)\n",
@@ -224,7 +235,7 @@
     "\n",
     "            sexcat = sexcat.rename(columns={'NUMBER':'SExID'})\n",
     "            sexcat = sexcat.rename(columns={'VECTOR_ASSOC':'AssocID'})\n",
-    "\n",
+    "            #sexcat['AssocID'] = 1\n",
     "            \n",
     "            sexcat['AssocID'] = sexcat['AssocID'].astype(int)\n",
     "            sexcat = sexcat[sexcat.AssocID!=0]\n",
@@ -362,10 +373,10 @@
     "            to_drop = (len(mags)//6)\n",
     "            mags = mags[to_drop:-to_drop]\n",
     "            synerrs = synerrs[to_drop:-to_drop]\n",
-    "        weighted_mean = np.sum(1/synerrs * mags) / np.sum(1/synerrs)\n",
+    "        weighted_mean = np.nansum(1/synerrs**2 * mags) / np.nansum(1/synerrs**2)\n",
     "        return weighted_mean, np.sqrt(np.mean(np.power(mags-weighted_mean,2)))\n",
     "    \n",
-    "    def get_mean_sigmaprime(self):\n",
+    "    def get_mean_sigmaprime(self, phot_df):\n",
     "        phot_df = self.phot_df.copy()\n",
     "        \"\"\"This will take some time\"\"\"\n",
     "        StarIDs = phot_df.index.get_level_values(0).unique().values\n",
@@ -378,20 +389,42 @@
     "                sub_phot_df = phot_df.loc[StarID,this_filter]\n",
     "                Lightcurve_SynErrors = sub_phot_df.SynError\n",
     "                Lightcurve_mags = sub_phot_df.MAG_APER2\n",
-    "                TrueMag, SigmaPrime = robust_mean(Lightcurve_mags, Lightcurve_SynErrors)\n",
+    "                TrueMag, SigmaPrime = self.robust_mean(Lightcurve_mags, Lightcurve_SynErrors)\n",
     "                phot_df.loc[(StarID, this_filter,),'RobustMean'] = TrueMag\n",
     "                phot_df.loc[(StarID, this_filter,),'RobustSigma']= SigmaPrime\n",
     "        phot_df['SigmaPrimeDeviation'] = (phot_df['MAG_APER2'] - phot_df['RobustMean']).abs() / phot_df['RobustSigma']\n",
-    "        phot_df['High_sigma_prime'] = phot_df['SigmaPrimeDeviation'] > 3\n",
+    "        phot_df['High_sigma_prime'] = phot_df['SigmaPrimeDeviation'] > 4\n",
     "        return phot_df\n",
     "    \n",
-    "    def clean(self):\n",
+    "    def get_local_mzp_corr(self, phot_df):\n",
+    "        phot_df['MagDiff'] = phot_df['MAG_APER2'] - phot_df['RobustMean']\n",
+    "        nearest = nearest_neighbours(phot_df)\n",
+    "        phot_df = phot_df[phot_df.Exp_Length == 'deep'].copy()\n",
+    "        \n",
+    "        IDs = phot_df.index.get_level_values(0).unique()\n",
+    "        phot_df['MZPCorr']=0\n",
+    "        for ID in IDs:\n",
+    "            neightbours = nearest.loc[ID]\n",
+    "            photometry = phot_df.loc[neightbours.values]\n",
+    "            MagOffset = photometry.groupby(['Filter', 'T_Start'])['MagDiff'].median()\n",
+    "            MagOffset = pd.DataFrame(MagOffset)\n",
+    "            MagOffset.columns = ['MZPCorr2']\n",
+    "            phot_df.loc[ID,'MZPCorr'] = pd.DataFrame(phot_df.loc[ID]).join(MagOffset)['MZPCorr2'].values\n",
+    "        phot_df['MAG_APER2_ORIG'] = phot_df['MAG_APER2']\n",
+    "        phot_df['MAG_APER2'] = phot_df['MAG_APER2'] - phot_df['MZPCorr']\n",
+    "        return phot_df\n",
+    "    \n",
+    "    \n",
+    "    def clean(self, MZPcorr=False):\n",
     "        phot_df = self.get_CI(self.phot_df)\n",
     "        phot_df = self.get_synthetic_err(phot_df)\n",
     "        phot_df = self.get_synthetic_err_deviation(phot_df)\n",
+    "        phot_df = self.get_mean_sigmaprime(phot_df)\n",
+    "        if MZPcorr:\n",
+    "            phot_df = self.get_local_mzp_corr(phot_df)\n",
     "        phot_df = phot_df[phot_df.CI < 5]\n",
-    "        \n",
-    "        print('Done. Returning photometry dataframe including CI and synthetic errors')\n",
+    "        phot_df = phot_df[(np.logical_not(phot_df.High_sigma_prime))*(np.logical_not(phot_df.High_sigma_syn))]\n",
+    "        print('Done. Returning photometry dataframe including CI and synthetic errors and MZP correction')\n",
     "        return phot_df\n"
    ]
   },
@@ -412,7 +445,7 @@
     "    Dists     = pd.DataFrame(Dists, index = SExCoordinates.index, columns=all_stars.index)\n",
     "    Assoc_df  = pd.DataFrame({'RefCatID':Dists.idxmin(axis=1)})\n",
     "    return Assoc_df.dropna()\n",
-    "def nearest_neighbours(phot_df, Nstars = 250):\n",
+    "def nearest_neighbours(phot_df, Nstars = 50):\n",
     "    catalogue = phot_df.groupby('AssocID')['ALPHA_J2000', 'DELTA_J2000'].median()\n",
     "    Nentries = len(catalogue)\n",
     "    \n",
@@ -448,7 +481,7 @@
     "    def GetMADvalues(self):\n",
     "        phot_df          = self.phot_df\n",
     "        MedianMagTime    = phot_df.groupby(['AssocID', 'Filter', 'T_Start'])['MAG_APER2'].median()\n",
-    "        MedianMagOverall = phot_df.groupby(['AssocID', 'Filter'])['MAG_APER2'].median()\n",
+    "        MedianMagOverall = phot_df.groupby(['AssocID', 'Filter'])['RobustMean'].median()\n",
     "        MagOffset        = (MedianMagTime - MedianMagOverall).abs()\n",
     "        self.MAD         = MagOffset.groupby(['AssocID', 'Filter']).median()\n",
     "        return self.MAD\n",
@@ -475,7 +508,7 @@
     "            mad_vals = self.MAD[self.MAD.index.get_level_values(1)==filter_]\n",
     "        else:\n",
     "            med_mags = self.MedMag#[self.MedMag.index.get_level_values(1)==filter_]\n",
-    "            mad_vals = self.MedMag#[self.MAD.index.get_level_values(1)==filter_]\n",
+    "            mad_vals = self.MAD#[self.MAD.index.get_level_values(1)==filter_]\n",
     "        plt.hist2d(med_mags, mad_vals, bins=(np.linspace(15,28,80), np.linspace(0,0.4,50)), cmap=plt.cm.jet)\n",
     "        plt.xlabel('Median magnitude')\n",
     "        plt.ylabel('MAG Value')\n",
@@ -568,8 +601,6 @@
     "        #plt.scatter(JulianDates, Magnitudes, marker='o', c='black')\n",
     "        \n",
     "\n",
-    "    \n",
-    "    \n",
     "    def median_mad_sigma(self):\n",
     "        mags, mads = self.GetMedMags(), self.GetMADvalues()  \n",
     "        mags = pd.DataFrame(mags)\n",
@@ -595,7 +626,7 @@
     "        MagsMads = pd.merge(MagsMads,MedMadBin, left_on='MagBin', right_index=True)\n",
     "\n",
     "        MagsMads['MADSigma'] = MagsMads['MAD'] / MagsMads['MedMadBin']\n",
-    "        MagsMads = MagsMads[MagsMads.MADSigma>4]\n",
+    "        #MagsMads = MagsMads[MagsMads.MADSigma>6]\n",
     "        return MagsMads\n",
     "    \n",
     "    def potential_candidates(self):\n",
@@ -621,7 +652,7 @@
     "all_stars = Table.read('../../../HST_Guido/30dor_all_newerr.UBVIHa.rot', format='ascii').to_pandas()\n",
     "all_stars.columns = 'ID;x;y;RA;Dec;u_1;eu_2;b_1;eb_2;v_1;ev_2;i_1;ei_2;ha_1;eha_2'.split(';')\n",
     "all_stars = all_stars.set_index('ID')\n",
-    "all_stars = all_stars[np.logical_not(((all_stars.ha_1<-10)+(all_stars.ha_1>50)))]"
+    "#all_stars = all_stars[np.logical_not(((all_stars.ha_1<-10)+(all_stars.ha_1>50)))]"
    ]
   },
   {
@@ -630,8 +661,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df = read_sexcats().return_func()\n",
-    "phot_df = HCV_error_analysis(phot_df).clean()"
+    "#pms_stars = Table.read('../../../HST_Guido/30dorallpmsstars.txt', format='ascii').to_pandas()\n",
+    "#pms_stars = pms_stars.set_index('NR')"
    ]
   },
   {
@@ -640,7 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df=HCV_error_analysis(phot_df).get_mean_sigmaprime()"
+    "phot_df = read_sexcats().return_func()"
    ]
   },
   {
@@ -649,8 +680,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df"
+    "phot_df = HCV_error_analysis(phot_df).clean(MZPcorr=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "magnitudes = phot_df.groupby(['AssocID', 'Filter'])['MAG_APER2'].median()\n",
+    "magnitudes = magnitudes.unstack()\n",
+    "\n",
+    "mads = Analyzer.GetMADvalues().unstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "magnitudes['V_Ha'] = magnitudes['F555W'] - magnitudes['F656N']\n",
+    "magnitudes['V_I'] = magnitudes['F555W'] - magnitudes['F814W']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phot_df.groupby('Filter')['MAG_APER2'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(magnitudes['V_I'], magnitudes['F555W'], s=1, marker='x', color='grey')\n",
+    "plt.scatter(magnitudes['V_I'].loc[pot_cand], magnitudes['F555W'].loc[pot_cand], s=1, marker='x', color='red')\n",
+    "#plt.scatter(magnitudes['V_I'].loc[pot_cand], magnitudes['V_Ha'].loc[pot_cand], s=1, marker='x', color='red')\n",
+    "plt.ylim(30,10)\n",
+    "plt.xlim(-0.5,3)\n",
+    "plt.ylabel('V')\n",
+    "plt.xlabel('V-I')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
