Commit before removing two of the three catalogue readers

--- a/SExtractor/Analysis/SExtractor Analysis.ipynb
+++ b/SExtractor/Analysis/SExtractor Analysis.ipynb
@@ -21,7 +21,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAD > 5 times MAG error\n"
+    "all_stars = Table.read('../../HST_Guido/30dor_all_newerr.UBVIHa.rot', format='ascii').to_pandas()\n",
+    "all_stars.columns = 'ID;x;y;RA;Dec;u_1;eu_2;b_1;eb_2;v_1;ev_2;i_1;ei_2;ha_1;eha_2'.split(';')\n",
+    "all_stars = all_stars.set_index('ID')\n",
+    "#all_stars = all_stars[np.logical_not(((all_stars.ha_1<-10)+(all_stars.ha_1>50)))]"
    ]
   },
   {
@@ -208,6 +211,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "all_stars.loc[phot_df.reset_index().AssocID.values].RA#.apply(lambda x: all_stars.loc[x].RA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "################################################################\n",
     "### Read from unaltered FLT frames with regridded whitelights###\n",
     "################################################################\n",
@@ -228,7 +240,8 @@
     "            if EXPTIME < 31:\n",
     "                continue\n",
     "            filter_  = hdul[0].header['FILTER']\n",
-    "            sexcat = Table.read(glob(item+'*phot*')[0], format=\"fits\", hdu='LDAC_OBJECTS')#.to_pandas()\n",
+    "            filename = glob(item+'*phot*')[0]\n",
+    "            sexcat = Table.read(filename, format=\"fits\", hdu='LDAC_OBJECTS')#.to_pandas()\n",
     "            sexcat = self.unpack_apers(sexcat)\n",
     "            sexcat.remove_columns(['MAG_APER', 'MAGERR_APER', 'FLUX_APER', 'FLUXERR_APER'])    \n",
     "            sexcat = sexcat.to_pandas()\n",
@@ -236,9 +249,13 @@
     "            sexcat = sexcat.rename(columns={'NUMBER':'SExID'})\n",
     "            sexcat = sexcat.rename(columns={'VECTOR_ASSOC':'AssocID'})\n",
     "            #sexcat['AssocID'] = 1\n",
-    "            \n",
+    "            sexcat['Filename'] = filename.replace('phot', 'pamcorr_rate')\n",
     "            sexcat['AssocID'] = sexcat['AssocID'].astype(int)\n",
     "            sexcat = sexcat[sexcat.AssocID!=0]\n",
+    "            \n",
+    "            sexcat['ALPHA_J2000'] = all_stars.loc[sexcat['AssocID'].values].RA.values\n",
+    "            sexcat['DELTA_J2000'] = all_stars.loc[sexcat['AssocID'].values].Dec.values\n",
+    "            \n",
     "            if wfc==2: \n",
     "                sexcat.SExID += phot_df[phot_df.WhichWFC==1].SExID.max()\n",
     "            #sexcat = sexcat.rename(columns={'VECTOR_ASSOC':'ID'})\n",
@@ -266,7 +283,7 @@
     "        sexcat = sexcat[(sexcat.MAG_APER2<80)&(sexcat.MAG_AUTO<80)]\n",
     "        sexcat = sexcat[sexcat.MAG_APER2<31.0]\n",
     "        sexcat = sexcat[sexcat.MAG_AUTO<35.0]\n",
-    "        sexcat = sexcat[sexcat.FLAGS<=7]\n",
+    "        sexcat = sexcat[sexcat.FLAGS==0]\n",
     "        sexcat = sexcat[sexcat.MAGERR_APER2<0.2]\n",
     "        return sexcat\n",
     "    \n",
@@ -335,12 +352,12 @@
     "        DistsTimemedian = Dists.groupby(['AssocID', 'Filter']).median()\n",
     "        DistsDivision   = (Dists/DistsTimemedian)**2\n",
     "        \n",
-    "        SynError = np.sqrt(MagDivision + CIDivision + MagAper_MagAutoDivision + DistsDivision)\n",
-    "        #ID = phot_df.groupby('SExID')['VECTOR_ASSOC'].median().astype(int)\n",
-    "        #ID = ID.apply(lambda x: 1000000+x)\n",
-    "        #ID[ID==1000000] = pd.Series(ID.index).apply(lambda x: 2000000+x).values\n",
-    "        phot_df['SynError'] = SynError\n",
+    "        BgTimeMedian = phot_df.groupby(['AssocID', 'Filter', 'T_Start'])['BACKGROUND'].median()\n",
+    "        BgMedian     = phot_df.groupby(['AssocID', 'Filter'])['BACKGROUND'].median() \n",
+    "        BgDeviation  = (BgTimeMedian / BgMedian)**2 -1\n",
     "        \n",
+    "        SynError = np.sqrt(MagDivision + CIDivision + MagAper_MagAutoDivision + BgDeviation)\n",
+    "        phot_df['SynError'] = SynError\n",
     "        return phot_df\n",
     "    \n",
     "    def linfit(self,x,b):\n",
@@ -413,7 +430,6 @@
     "        phot_df['MAG_APER2_ORIG'] = phot_df['MAG_APER2']\n",
     "        phot_df['MAG_APER2'] = phot_df['MAG_APER2'] - phot_df['MZPCorr']\n",
     "        return phot_df\n",
-    "    \n",
     "    \n",
     "    def clean(self, MZPcorr=False):\n",
     "        phot_df = self.get_CI(self.phot_df)\n",
@@ -597,7 +613,7 @@
     "        Synth_err   = self.phot_df.loc[AssocID, Filter].SynErrorDevSig\n",
     "        MAG_err     = self.phot_df.loc[AssocID, Filter].MAGERR_APER2\n",
     "        \n",
-    "        plt.errorbar(JulianDates, Magnitudes, yerr=Synth_err, linestyle='none', fmt='o', ecolor='black', capthick=2)\n",
+    "        plt.errorbar(JulianDates, Magnitudes, yerr=MAG_err, linestyle='none', fmt='o', ecolor='black', capthick=2)\n",
     "        #plt.scatter(JulianDates, Magnitudes, marker='o', c='black')\n",
     "        \n",
     "\n",
@@ -633,7 +649,58 @@
     "        MagsMads = self.median_mad_sigma()\n",
     "        PotCandidates = MagsMads['MAD'].unstack()\n",
     "        PotCandidates['NFilters'] = PotCandidates.count(axis=1)\n",
-    "        return PotCandidates"
+    "        return PotCandidates\n",
+    "    \n",
+    "    def get_cutout(self,AssocID, Filter):\n",
+    "        from astropy import visualization\n",
+    "        from astropy.visualization import ImageNormalize\n",
+    "        from astropy.visualization.stretch import SinhStretch, LinearStretch\n",
+    "        from astropy.visualization import ImageNormalize\n",
+    "\n",
+    "        # Transforms normalized values [0,1] to [-1,1] before stretch and then back\n",
+    "        stretch = LinearStretch(slope=0.5, intercept=0.5) + SinhStretch() + \\\n",
+    "            LinearStretch(slope=2, intercept=-1)\n",
+    "        local_phot_df = self.phot_df.loc[AssocID, Filter]\n",
+    "        mags = local_phot_df.MAG_APER2\n",
+    "        files = local_phot_df.Filename.values\n",
+    "        xcoords, ycoords = local_phot_df.X_IMAGE.values, local_phot_df.Y_IMAGE.values\n",
+    "\n",
+    "        racenter, deccenter = local_phot_df.ALPHA_J2000.values[0], local_phot_df.DELTA_J2000.values[0]\n",
+    "\n",
+    "        stretch = LinearStretch(slope=10, intercept=10) + SinhStretch() + \\\n",
+    "                LinearStretch(slope=2, intercept=-1)\n",
+    "        norm = ImageNormalize(stretch=stretch)\n",
+    "        plt.figure(figsize=(8,35))\n",
+    "        iter_=0\n",
+    "        for i in range(len(files)):\n",
+    "            iter_+=1\n",
+    "            file = files[i]\n",
+    "\n",
+    "            Xcenter, Ycenter = xcoords[i]//1-1, ycoords[i]//1-1\n",
+    "            hdu = fits.open(file)[1].data\n",
+    "\n",
+    "            plt.subplot('82'+str(iter_))\n",
+    "            dx, dy = 100,100\n",
+    "            data = hdu[int(Ycenter-dy):int(Ycenter+dy),int(Xcenter-dx):int(Xcenter+dx)]\n",
+    "            plt.imshow(data, norm=norm,vmin=np.min(data), vmax=np.max(data), cmap='gray', extent=[int(Xcenter-dx),int(Xcenter+dx),int(Ycenter-dy),int(Ycenter+dy)], origin='lower')\n",
+    "            plt.scatter(Xcenter, Ycenter, marker='X', s=50, color='red')\n",
+    "\n",
+    "            iter_+=1\n",
+    "\n",
+    "            plt.subplot('82'+str(iter_))\n",
+    "            dx, dy = 300,300\n",
+    "            raoffset = dx*0.05\n",
+    "            decoffset = dy*0.05\n",
+    "\n",
+    "            data = hdu[int(Ycenter-dy):int(Ycenter+dy),int(Xcenter-dx):int(Xcenter+dx)]\n",
+    "            plt.imshow(data, norm=norm,vmin=0, vmax=np.max(data), cmap='gray', extent=[int(Xcenter-dx),int(Xcenter+dx),int(Ycenter-dy),int(Ycenter+dy)], origin='lower')\n",
+    "            plt.scatter(Xcenter, Ycenter, marker='X', s=50, color='red')\n",
+    "\n",
+    "            if iter_==8:\n",
+    "                break\n",
+    "        #plt.suptitle('RA '+str(racenter)+' DEC '+str(deccenter))\n",
+    "        plt.tight_layout()\n",
+    "        return \n"
    ]
   },
   {
@@ -641,28 +708,6 @@
    "metadata": {},
    "source": [
     "<h3>Code</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_stars = Table.read('../../../HST_Guido/30dor_all_newerr.UBVIHa.rot', format='ascii').to_pandas()\n",
-    "all_stars.columns = 'ID;x;y;RA;Dec;u_1;eu_2;b_1;eb_2;v_1;ev_2;i_1;ei_2;ha_1;eha_2'.split(';')\n",
-    "all_stars = all_stars.set_index('ID')\n",
-    "#all_stars = all_stars[np.logical_not(((all_stars.ha_1<-10)+(all_stars.ha_1>50)))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pms_stars = Table.read('../../../HST_Guido/30dorallpmsstars.txt', format='ascii').to_pandas()\n",
-    "#pms_stars = pms_stars.set_index('NR')"
    ]
   },
   {
@@ -680,7 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df = HCV_error_analysis(phot_df).clean(MZPcorr=False)"
+    "phot_dfb = HCV_error_analysis(phot_df).clean(MZPcorr=False)"
    ]
   },
   {
@@ -689,10 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "magnitudes = phot_df.groupby(['AssocID', 'Filter'])['MAG_APER2'].median()\n",
-    "magnitudes = magnitudes.unstack()\n",
-    "\n",
-    "mads = Analyzer.GetMADvalues().unstack()"
+    "phot_dfb"
    ]
   },
   {
@@ -701,8 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "magnitudes['V_Ha'] = magnitudes['F555W'] - magnitudes['F656N']\n",
-    "magnitudes['V_I'] = magnitudes['F555W'] - magnitudes['F814W']"
+    "Analyzer = Analysis(phot_dfb)"
    ]
   },
   {
@@ -711,7 +752,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df.groupby('Filter')['MAG_APER2'].nunique()"
+    "mags = Analyzer.GetMedMags()\n",
+    "mads = Analyzer.GetMADvalues()\n",
+    "nmeas = Analyzer.GetNumberOfMeasurements()\n",
+    "magmad = pd.DataFrame(mags).join(pd.DataFrame({'MAD':mads}))\n",
+    "magmadn = magmad.join(pd.DataFrame({'Nmeas':nmeas}))"
    ]
   },
   {
@@ -720,14 +765,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(magnitudes['V_I'], magnitudes['F555W'], s=1, marker='x', color='grey')\n",
-    "plt.scatter(magnitudes['V_I'].loc[pot_cand], magnitudes['F555W'].loc[pot_cand], s=1, marker='x', color='red')\n",
-    "#plt.scatter(magnitudes['V_I'].loc[pot_cand], magnitudes['V_Ha'].loc[pot_cand], s=1, marker='x', color='red')\n",
-    "plt.ylim(30,10)\n",
-    "plt.xlim(-0.5,3)\n",
-    "plt.ylabel('V')\n",
-    "plt.xlabel('V-I')\n",
-    "plt.show()"
+    "magmadn[(magmadn.MAG_APER2<20)&(magmadn.MAD>0.5)&(magmadn.Nmeas>5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Analyzer.get_cutout(2775, 'F656N')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Analyzer.GetTimeSeries(2775, 'F656N')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "phot_dfb.loc[2775]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=phot_df.groupby(['AssocID', 'Filter', 'T_Start'])['BACKGROUND'].median()/phot_df.groupby(['AssocID', 'Filter'])['BACKGROUND'].median()"
    ]
   },
   {
